Media Card Commit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
   </head>
 
   <body>
-  <div class="container">
-  <h1 class="dispaly-3 mb-4 border-bottom">BootStrap</h1>
+<%= render 'layouts/header' %>
+<div class="container">
     <%= yield %>
     </div>
   </body>
